# TKT20010_Kara

./: README.md  ai.py  board.py  main.py  määrittelydokumentti.md  pyproject.toml  toteutusdokumentti.md
TKT20010_Kara/: README.md
raportit/: määrittelydokumentti.md  testausdokumentti  viikkoraportti_1  viikkoraportti_2  viikkoraportti_3  viikkoraportti_4  viikkoraportti_5  viikkoraportti_6
src/connect4/: board.py
testikansio/: .testiteksti.txt.swp
tests/: test_ai.py  test_board.py
