[project]
name = "tkt20010-kara"
version = "0.1.0"
description = "Connect4 AI harjoitustyö minimax-algoritmilla"
authors = [
    {name = "Karaatsar",email = "kara.atsar@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[[tool.poetry.packages]]
include = "connect4"
from = "src"

